# Djanet

Djanet/: README.md  pyproject.toml
Djanet/.github/: copilot-instructions.md
Djanet/djanet-client/: app.py
Djanet/djanet-client/.github/: copilot-instructions.md
Djanet/src/physics_solver_vis/: server.py
