[project]
name = "physics-solver-vis"
version = "1.0.0"
description = "An MCP server for solving physics problems and generating visualizations."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [ "mcp>=1.9.4", "pydantic", "langchain", "langchain-openai",]
[[project.authors]]
name = "Domandspace"
email = "domme1907@gmail.com"

[build-system]
requires = [ "hatchling",]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/physics_solver_vis"]

[project.scripts]
physics-solver-vis = "physics_solver_vis.server:main"
